# thread_the_needle

./: .gitignore  Agent - CnnVae (colab).ipynb  Agent - CnnVae (local).ipynb  Agent - CnnVae (offline - oracle).ipynb  Agent - CnnVae (offline - ppo).ipynb  Agent - CnnVae (offline).ipynb  Agent - CnnVae (online - Discret Ppo ppo).ipynb  Agent - CnnVae (online - Sb Ppo).ipynb  Agent - CnnVae (online - Vi Ppo).ipynb  Agent - CnnVae (online - discrete ppo).ipynb  Agent - CnnVae (online - lookahead).ipynb  Agent - CnnVae (online - sb discrete ppo).ipynb  Agent - CnnVae (online - sb dyna ppo).ipynb  Agent - CnnVae (online - stable baselines ppo).ipynb  Agent - CnnVae (online -new ppo).ipynb  Agent - CnnVae (online).ipynb  Agent - CnnVae (pre-run).ipynb  Agent - CnnVae.ipynb  Agent - Dyna.ipynb  Agent - LstmCnnVae (offline - oracle).ipynb  Agent - Ppo.ipynb  Agents.ipynb  AtariPerformance.ipynb  Dynamic Programming simulations.ipynb  MCTS.ipynb  PomdpNetwork.ipynb  README.md  RandomAgents.ipynb  Rooms Problem.ipynb  SimAgent-PpoOpen.ipynb  SimAgent-Rucrrent.ipynb  SimAgent-StateInf.ipynb  SimAgent-VaeCnn.ipynb  SimAgent-VaeDyna.ipynb  Spectral clustering of the graph laplacian.ipynb  State Inference - ArCnn.ipynb  State Inference - Cnn.ipynb  State Inference - LstmVae.ipynb  State Inference - Mlp.ipynb  StateInference-CNN.ipynb  (+36 more)
configs/: agent_config.yml  agent_lstm_config.yml  agent_nppo_config.yml  discrete_ppo_config.yml  env_config.yml  vae_config.yml
enviornments/: rooms_problem.py  thread_the_needle.py  utils.py
environments/: rooms_problem.py  state_inference.py  (+2 more)
(+189 files in other folders)
