[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thread_the_needle"
version = "0.1.0"
description = "A gridworld environment for reinforcement learning"
authors = [
    { name = "Nicholas Franklin", email = "nthompsonfranklin@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10.13"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "gymnasium",
    "pyyaml"
]

[tool.hatch.build.targets.wheel]
packages = ["src/thread_the_needle"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]